--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +21,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.users {
+  font-size: 20px;
+
 }
 
 /*@keyframes App-logo-spin {*/
