--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,17 @@
 
 }
 
+ul {
+  display: flex;
+  list-style: none;
+
+}
+
+li {
+  margin-right: 20px;
+
+}
+
 /*@keyframes App-logo-spin {*/
 /*  from {*/
 /*    transform: rotate(0deg);*/
