--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,17 +24,24 @@
 }
 
 .users {
-  font-size: 20px;
+  /*font-size: 20px;*/
 
 }
 
-ul {
+.users-list {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+
+}
+
+.nav-list-ul {
   display: flex;
   list-style: none;
 
 }
 
-li {
+.nav-list-li {
   margin-right: 20px;
 
 }
